dummy auth_token

--- a/mopidy_soundcloud/ext.conf
+++ b/mopidy_soundcloud/ext.conf
@@ -2,7 +2,7 @@
 enabled = True
 
 # Your SoundCloud auth token, you can get yours at http://www.mopidy.com/authenticate
-auth_token = 
+auth_token = 2t9loNQH90kzJcsFCODdigxfp325aq4z
 
 # Number of songs to fetch in explore section
 explore_songs = 25
